Styling enchancements, fix missing data, add menu button on smaller screens, and fix maps issue

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,9 +1,10 @@
-a {
-  text-decoration: none !important;
+body {
+  font-family: 'Merriweather', serif;
+  text-align: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  text-align: center;
+a {
+  text-decoration: none !important;
 }
 
 img {
@@ -11,16 +12,16 @@ img {
   margin: 0 auto;
 }
 
-p {
-  text-align: center;
-}
-
 footer {
-  margin-bottom: 20px;
+  margin-bottom: 70px;
 }
 
 footer > p {
   float: right !important;
+}
+
+.navbar-header .navbar-toggle .icon-bar {
+  background-color: black;
 }
 
 .park {
@@ -144,10 +145,6 @@ footer > p {
 
 @media (max-width: 768px) {
 
-  .break {
-    display: block;
-  }
-
   .toolbar-home > * {
     width: 100%;
     margin-bottom: 10px;
@@ -177,10 +174,6 @@ footer > p {
 
 @media (min-width: 768px) {
 
-  .break {
-    display: none;
-  }
-
   .toolbar-home {
     display: flex;
     justify-content: space-between;
@@ -191,11 +184,11 @@ footer > p {
   }
 
   .foursquare-and-distance > * {
-    font-size: 0.75em;
+    font-size: 0.65em;
   }
 
   .park-hero {
-    height: 477.33px !important;
+    height: 458.67px !important;
   }
 
   .foursquare-swarm-div {
@@ -232,7 +225,7 @@ footer > p {
   }
 
   .park-hero {
-    height: 408.66px !important;
+    height: 390px !important;
   }
 
   .foursquare-swarm-div {
@@ -252,7 +245,7 @@ footer > p {
   }
 
   .park-hero {
-    height: 498px !important;
+    height: 478.66px !important;
   }
 
 }
